fix: alignment

--- a/src/components/Upload.css
+++ b/src/components/Upload.css
@@ -98,6 +98,10 @@ input[type="file"]::file-selector-button:hover {
   position: absolute;
   left: 35px;
 }
+.file-selector-none {
+  position: relative;
+  left: 145px;
+}
 .get-Link {
   position: absolute;
   left: 196px;
